Replace pipes in Google font urls with %7C, eliminate font Georgia from use in the resume.

--- a/css/style_resume.css
+++ b/css/style_resume.css
@@ -49,7 +49,7 @@ h1 {
   /* For all of h1 except the accent words which will follow 'span' */
   font-weight: 700;
   font-size: 48px;
-  /*font-family: "Pacifico", Georgia, cursive;*/
+  /*font-family: "Pacifico", cursive;*/
   /*font-weight: 400;*/}
 
 h2 {
